# tcal_rs_backup

./: Cargo.toml  FIX_HISTORY.md  README.md  STUDY_CODE.md  history.txt
crates/: README.md
crates/meval/: Cargo.toml  README.md  debug_tokenizer.rs  test_tokenizer_debug.rs
crates/meval/src/: expr.rs  lib.rs  shunting_yard.rs  tokenizer.rs
src/: bitview.rs  calculator2.rs  converter.rs  evaluator.rs  formatter.rs  fprice.rs  fprice_standalone.rs  lib_rs_backup.rs  main.rs  number_theory.rs  traits.rs
src/calculator/: converter.rs  engine.rs  formatter.rs  mod.rs  parser.rs
src/number_theory/: parity.rs  primes.rs  rounding.rs  small_primes.inc  totient.rs  traits.rs
tests/: Makefile  Makefile.in  README.md  polynomial.batch
